build: Lint under CircleCI
Signed-off-by: Arve Knudsen <arve.knudsen@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,5 @@ jobs:
       - run:
           name: Build
           command: |
-            go build ./...
-            go test ./...
+            make test
+            make lint
