Chore: Convert to Mage
Signed-off-by: Arve Knudsen <arve.knudsen@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,5 @@ jobs:
       - run:
           name: Build
           command: |
-            make lint
-            make test
+            mage -v lint
+            mage -v test
