Use grafana-plugin-ci image
Signed-off-by: Arve Knudsen <arve.knudsen@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cimg/go:1.14
+      - image: srclosson/grafana-plugin-ci-alpine:latest
     steps:
       - checkout
       - run:
