CircleCI: Fix gosec
Signed-off-by: Arve Knudsen <arve.knudsen@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,6 @@ jobs:
             go vet ./...
             golangci-lint run ./...
             revive -formatter stylish -config scripts/configs/revive.toml ./...
-            gosec -quiet -exclude=G104,G107,G108,G201,G202,G204,G301,G304,G401,G402,G501 -conf=scripts/configs/gosec.json
+            gosec -quiet -exclude=G104,G107,G108,G201,G202,G204,G301,G304,G401,G402,G501 -conf=scripts/configs/gosec.json ./...
 
             go test ./...
