Chore: Convert to Mage (#144)
* Chore: Convert to Mage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,15 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cimg/go:1.14
-    working_directory: ~/build
+      - image: srclosson/grafana-plugin-ci-alpine:latest
     steps:
       - checkout
       - run:
           name: Build
           command: |
-            make lint
-            make test
+            go vet ./...
+            golangci-lint run ./...
+            revive -formatter stylish -config scripts/configs/revive.toml ./...
+            gosec -quiet -exclude=G104,G107,G108,G201,G202,G204,G301,G304,G401,G402,G501 -conf=scripts/configs/gosec.json ./...
+
+            go test ./...
