--- a/scripts/configs/revive.toml
+++ b/scripts/configs/revive.toml
@@ -2,6 +2,7 @@ ignoreGeneratedHeader = false
 severity = "error"
 confidence = 0.8
 errorCode = 1
+warningCode = 1
 
 [rule.context-as-argument]
 [rule.error-return]
@@ -12,14 +13,12 @@ errorCode = 1
 [rule.indent-error-flow]
 [rule.error-strings]
 [rule.error-naming]
+[rule.exported]
+[rule.unexported-return]
+[rule.dot-imports]
+[rule.receiver-naming]
+[rule.blank-imports]
+[rule.var-naming]
 
 # This can be checked by other tools like megacheck
 [rule.unreachable-code]
-
-# Those are probably should be enabled at some point
-# [rule.unexported-return]
-# [rule.exported]
-# [rule.var-naming]
-# [rule.dot-imports]
-# [rule.receiver-naming]
-# [rule.blank-imports]
