--- a/.golangci.toml
+++ b/.golangci.toml
@@ -1,2 +1,49 @@
 [run]
 skip-files = ["data/.*\\.gen\\.go", "data/generic_nullable_vector\\.go", "data/generic_vector\\.go"]
+
+[linters-settings.golint]
+min-confidence = 0
+
+[linters-settings.goconst]
+min-len = 2
+min-occurrences = 2
+
+[linters]
+disable-all = true
+enable = [
+  "bodyclose",
+  "deadcode",
+  "depguard",
+  "dogsled",
+  "dupl",
+  "errcheck",
+  "funlen",
+  "gochecknoinits",
+  "goconst",
+  "gocritic",
+  "gocyclo",
+  "gofmt",
+  "goimports",
+  "golint",
+  "gomnd",
+  "goprintffuncname",
+  "gosec",
+  "gosimple",
+  "govet",
+  "ineffassign",
+  "interfacer",
+  "lll",
+  "misspell",
+  "nakedret",
+  "rowserrcheck",
+  "scopelint",
+  "staticcheck",
+  "structcheck",
+  "stylecheck",
+  "typecheck",
+  "unconvert",
+  "unparam",
+  "unused",
+  "varcheck",
+  "whitespace",
+]
