--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,8 @@ jobs:
           key: go-modules-v1-{{ checksum "go.sum" }}
           paths:
             - "/go/pkg/mod"
+
+workflows:
+  ci:
+    jobs:
+      - build
