--- a/.golangci.toml
+++ b/.golangci.toml
@@ -2,11 +2,27 @@
 skip-files = ["data/.*\\.gen\\.go", "data/generic_nullable_vector\\.go", "data/generic_vector\\.go"]
 
 [linters-settings.golint]
-min-confidence = 0
+min-confidence = 1
 
 [linters-settings.goconst]
 min-len = 2
 min-occurrences = 2
+
+#[linters-settings.gocritic]
+#enabled-tags = [
+  #"diagnostic",
+  #"experimental",
+  #"opinionated",
+  #"performance",
+  #"style",
+#]
+#disabled-checks = [
+  #"dupImport", # https://github.com/go-critic/go-critic/issues/845
+  #"ifElseChain",
+  #"octalLiteral",
+  #"whyNoLint",
+  #"wrapperFunc",
+#]
 
 [linters]
 disable-all = true
@@ -15,25 +31,19 @@ enable = [
   "deadcode",
   "depguard",
   "dogsled",
-  "dupl",
   "errcheck",
-  "funlen",
   "gochecknoinits",
-  "goconst",
+  #"goconst",
   "gocritic",
-  "gocyclo",
-  "gofmt",
+  #"gocyclo",
   "goimports",
   "golint",
-  "gomnd",
   "goprintffuncname",
   "gosec",
   "gosimple",
   "govet",
   "ineffassign",
   "interfacer",
-  "lll",
-  "misspell",
   "nakedret",
   "rowserrcheck",
   "scopelint",
@@ -42,7 +52,7 @@ enable = [
   "stylecheck",
   "typecheck",
   "unconvert",
-  "unparam",
+  #"unparam",
   "unused",
   "varcheck",
   "whitespace",
