--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 defaults: &defaults
   docker:
-    - image: grafana/grafana-plugin-ci:latest-alpine
+    - image: grafana/grafana-plugin-ci:1.1.0-alpine
 
 jobs:
   build:
