--- a/.golangci.toml
+++ b/.golangci.toml
@@ -47,3 +47,7 @@ exclude-use-default = false
 # Disabled linters (might want them later)
 # "gocyclo",
 # "unparam"
+
+[[issues.exclude-rules]]
+linters = ["gosec"]
+text = "G304"
