Chore: Enable unparam linter
Signed-off-by: Arve Knudsen <arve.knudsen@gmail.com>

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -39,8 +39,8 @@ enable = [
   "unused",
   "varcheck",
   "whitespace",
+  "unparam",
 ]
 
 # Disabled linters (might want them later)
 # "gocyclo",
-# "unparam"
