Chore: Add thelper linter
Signed-off-by: Arve Knudsen <arve.knudsen@gmail.com>

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -45,6 +45,7 @@ enable = [
   "asciicheck",
   "errorlint",
   "sqlclosecheck",
+  "thelper",
 ]
 # Don't require that errors are included through wrapping, since might not always want to wrap an error
 [[issues.exclude-rules]]
