fix lint errors

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -14,6 +14,7 @@ ignore-generated-header = false
 [linters]
 disable-all = true
 enable = [
+  "bodyclose",
   "deadcode",
   "depguard",
   "dogsled",
