--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,5 +2,5 @@
 # the repo. Unless a later match takes precedence,
 # these will be requested for review when someone opens a pull request.
 * @grafana/plugins-platform-backend
-/data @grafana/data-plane-wg
-/experimental/sdata @grafana/data-plane-wg
+/data/ @grafana/data-plane-wg
+/experimental/sdata/ @grafana/data-plane-wg
