appease revive lint rule

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -46,7 +46,8 @@ enable = [
   "asciicheck",
   "errorlint",
   "sqlclosecheck",
-  "thelper"
+  "thelper",
+  "revive"
 ]
 # Don't require that errors are included through wrapping, since might not always want to wrap an error
 [[issues.exclude-rules]]
