Add depguard rules

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -14,6 +14,12 @@ ignore-generated-header = false
 [linters-settings.misspell]
 ignore-words = ["unknwon"]
 
+[linters-settings.depguard.rules.main]
+allow = [] # allow all
+deny = [
+  { pkg = "io/ioutil", desc = "Deprecated: As of Go 1.16, the same functionality is now provided by package io or package os, and those implementations should be preferred in new code. See the specific function documentation for details." },
+]
+
 [linters]
 disable-all = true
 enable = [
