--- a/.drone.yml
+++ b/.drone.yml
@@ -28,11 +28,11 @@ steps:
 - name: test
   image: grafana/grafana-plugin-ci:1.9.5
   commands:
+  # -race requires cgo + a C compiler
   - apt update
   - apt install -y gcc
   - mage -v testRace
   environment:
-    # -race requires cgo
     CGO_ENABLED: "1"
 ---
 kind: pipeline
@@ -61,15 +61,15 @@ steps:
 - name: test
   image: grafana/grafana-plugin-ci:1.9.5
   commands:
+  # -race requires cgo + a C compiler
   - apt update
   - apt install -y gcc
   - mage -v testRace
   environment:
-    # -race requires cgo
     CGO_ENABLED: "1"
 
 ---
 kind: signature
-hmac: 1bf1d193ce89ab19332b69fe807b1087a8c3808f459456c71ede5eb3da1ce50e
+hmac: cee688a6f8ed3ecb1ddd384e349a6556d28b23b298057d8fa02da37ab50b0ba7
 
 ...
