--- a/.github/workflows/check-grafana-compatibility.yml
+++ b/.github/workflows/check-grafana-compatibility.yml
@@ -25,7 +25,7 @@ jobs:
   
     - uses: actions/setup-go@v4
       with:
-        go-version-file: 'pr/go.mod'
+        go-version-file: 'grafana-plugin-sdk-go/go.mod'
 
     - name: Link sdk
       working-directory: './grafana'
