--- a/.github/workflows/check-incompatibility.yml
+++ b/.github/workflows/check-incompatibility.yml
@@ -20,15 +20,17 @@ jobs:
       with:
         path: './grafana-plugin-sdk-go'
     - name: Setup Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: '1.21'
         check-latest: true
-        go-version-file: 'grafana-plugin-sdk-go/go.mod'
+        go-version-file: './grafana-plugin-sdk-go/go.mod'
 
     - name: Install gorelease
+      working-directory: './grafana-plugin-sdk-go'
       run: go install golang.org/x/exp/cmd/gorelease@latest
 
     - name: Check for incompatible changes
+      working-directory: './grafana-plugin-sdk-go'
       run: |
         gorelease | tee /dev/stderr | grep -vzq 'incompatible changes'
