--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,3 +3,4 @@
 # these will be requested for review when someone opens a pull request.
 * @grafana/plugins-platform-backend
 /data/ @grafana/data-plane-wg
+/data/sqlutil @grafana/oss-big-tent
