--- a/.github/workflows/check-grafana-compatibility.yml
+++ b/.github/workflows/check-grafana-compatibility.yml
@@ -25,8 +25,8 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         cache: false
+        go-version: '~1.22'
         check-latest: true
-        go-version-file: 'grafana-plugin-sdk-go/go.mod'
 
     - name: Check if branch exists in Grafana
       working-directory: './grafana'
