fix compatibility with earlier proto gen script

--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -1,9 +1,8 @@
 version: v1
-managed:
-  enabled: true
 plugins:
   - plugin: go
     out: genproto/pluginv2
+    protoc_path: protoc
   - plugin: go-grpc
     out: genproto/pluginv2
     opt:
