--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,43 +7,37 @@ on:
   pull_request:
 
 jobs:
-  build:
+  build_lint_test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup go
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
+
       - name: Setup Mage
         uses: magefile/mage-action@v3
         with:
           install-only: true
+
+      - name: Install test dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y gcc
+
+      - name: Setup CI Linter
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
 
       - name: Build
         run: |
           mage -v build
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup go
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: go.mod
-      - name: Install dependencies
+      - name: Lint
         run: |
-          sudo apt update
-          sudo apt install -y gcc
-
-      - name: Setup Mage
-        uses: magefile/mage-action@v3
-        with:
-          install-only: true
+          mage -v lint
 
       - name: Test
         run: |
