--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
 
 jobs:
-  build_lint_test:
+  build-lint-test:
+    name: CI
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,7 +17,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v5
         with:
-          go-version-file: go.mod
+          go-version-file: ./go.mod
 
       - name: Setup Mage
         uses: magefile/mage-action@v3
@@ -28,16 +29,9 @@ jobs:
           sudo apt update
           sudo apt install -y gcc
 
-      - name: Setup CI Linter
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
-
       - name: Build
         run: |
           mage -v build
-
-      - name: Lint
-        run: |
-          mage -v lint
 
       - name: Test
         run: |
