--- a/.golangci.toml
+++ b/.golangci.toml
@@ -1,5 +1,5 @@
-[run]
-skip-files = ["data/.*\\.gen\\.go", "data/generic_nullable_vector\\.go", "data/generic_vector\\.go"]
+[issues]
+exclude-files = ["data/.*\\.gen\\.go", "data/generic_nullable_vector\\.go", "data/generic_vector\\.go"]
 
 [linters-settings.golint]
 min-confidence = 1
@@ -39,7 +39,7 @@ enable = [
   "misspell",
   "nakedret",
   "rowserrcheck",
-  "exportloopref",
+  "copyloopvar",
   "staticcheck",
   "stylecheck",
   "typecheck",
@@ -59,3 +59,8 @@ enable = [
 [[issues.exclude-rules]]
 linters = ["errorlint"]
 text = "non-wrapping format verb for fmt.Errorf"
+[[issues.exclude-rules]]
+linters = ["staticcheck"]
+text = "SA1019"
+[linters-settings.gosec]
+excludes = ["G115"]
