--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,15 @@ on:
       - main
   pull_request:
 
+permissions:
+  contents: read
+
+env:
+  GOLANGCI_LINT_VERSION: v1.61.0
+
 jobs:
-  build-lint-test:
-    name: CI
+  lint-build-test:
+    name: Lint, Build, and Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,19 +25,28 @@ jobs:
         with:
           go-version-file: ./go.mod
 
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: ${{env.GOLANGCI_LINT_VERSION}}
+          args: |
+            "./..." --timeout=7m
+          skip-cache: true
+          install-mode: binary
+
       - name: Setup Mage
         uses: magefile/mage-action@v3
         with:
           install-only: true
 
+      - name: Build
+        run: |
+          mage -v build
+
       - name: Install test dependencies
         run: |
           sudo apt update
           sudo apt install -y gcc
-
-      - name: Build
-        run: |
-          mage -v build
 
       - name: Test
         run: |
