--- a/.github/workflows/check-incompatibility.yml
+++ b/.github/workflows/check-incompatibility.yml
@@ -14,11 +14,14 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       with:
+        persist-credentials: false
         path: './grafana-plugin-sdk-go'
-    - uses: actions/setup-go@v5
+    - uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # 5.3.0
       with:
         cache: false
         check-latest: true
