--- a/.github/workflows/check-grafana-compatibility.yml
+++ b/.github/workflows/check-grafana-compatibility.yml
@@ -14,15 +14,19 @@ jobs:
   buildPR:
     name: Build PR
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       with:
+        persist-credentials: false
         path: './grafana-plugin-sdk-go'
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       with:
+        persist-credentials: false
         repository: 'grafana/grafana'
         path: './grafana'
-    - uses: actions/setup-go@v5
+    - uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # 5.3.0
       with:
         cache: false
         go-version: '~1.22'
@@ -30,14 +34,14 @@ jobs:
 
     - name: Check if branch exists in Grafana
       working-directory: './grafana'
+      env:
+        BRANCH: ${{ github.head_ref }}
       run: |
-        if git ls-remote --heads --quiet --exit-code origin ${{ github.head_ref }}
-        then
-          echo "Found branch ${{ github.head_ref }} in Grafana"
-          git fetch origin ${{ github.head_ref }}
-          git checkout ${{ github.head_ref }}
+        if git ls-remote --heads --quiet --exit-code origin "$BRANCH"; then
+          echo "Found branch $BRANCH in Grafana"
+          git fetch origin "$BRANCH" && git checkout "$BRANCH"
         else
-          echo "Branch ${{ github.head_ref }} not found in Grafana"
+          echo "Branch $BRANCH not found in Grafana"
         fi
 
     - name: Link sdk
